(Format: Year/Month/Day)
Changes for 0.1.15:
*03/02/16:
   * Added layer submenu to window menu + small fix (Simon)
     Screen.cc Window.hh/cc fluxbox.hh     
*03/02/15:
   * Added Style menu and fixed theme listeners for FbWinFrame, Menu and Toolbar (Henrik)
     ToolbarTheme.hh/cc, Toolbar.hh/cc, FbTk Menu.hh/cc, FbTk MenuTheme.hh/cc,
	 Screen.cc, FbWinFrame.hh/cc, FbWinFrameTheme.hh/cc
   * Moved Observer.hh/cc and Subject.hh/cc to FbTk directory and 
     change Subject to use std::list instead of std::vector (Henrik)
   * Added SetStyleCmd command, which takes argument for style filename (Henrik)
     FbCommands.hh/cc	
*03/02/10:
   * More fiddling of Layer code, cleaning up (Henrik + Simon)
     FbTk/MultLayers.hh/cc FbTk/XLayer.hh/cc FbTk/XLayerItem.hh/cc 
     Gnome.cc Screen.hh/cc Tab.cc Window.hh/cc Workspace.cc fluxbox.cc
*03/02/03:
   * Integration of new Layering code, plus updates to the code (Simon)
   - new KeyActions: Raise/LowerLayer, AlwaysOnTop/Bottom, Top/BottomLayer
     AtomHandler.hh Ewmh.hh/cc FbWindow.hh/cc Menu.hh MultLayers.hh/cc
     XLayer.hh/cc XLayerItem.hh/cc Gnome.hh/cc Keys.hh/cc Screen.hh/cc Tab.cc
     Window.hh/cc Workspace.hh/cc fluxbox.hh/cc fluxbox.1.in
   * Added a "Quit" KeyAction (Simon)
     Keys.hh/cc, fluxbox.cc fluxbox.1.in
   * Removed XLayerItem from FbTk::FbWindow
   * Removed XLayerItem from FbTk::Menu
     FbTk/Menu.hh
*03/01/23:
   * Added polish locales to fluxbox-generate_menu (thanks Adam Byrtek)
*03/01/16:
   * Added new Layering code into FbTk (Simon)
     FbTk/... Layer.hh LayerItem.hh MultLayers.cc MultLayers.hh 
     XLayer.cc XLayer.hh XLayerItem.cc XLayerItem.hh
*03/01/12:
   * Added RootTheme which redraws the background
     Screen.hh/cc
   * Fixed button GC for title bar buttons
     FbWinFrame.cc
   * BoolMenuItem, for changing bool values from menu
     BoolMenuItem.hh/cc
   * Fixed optional visability for SlitClients,
     see client list menu in Slit